# creduce

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  AggregateToScalar.cpp  AggregateToScalar.h  BinOpSimplification.cpp  BinOpSimplification.h  CMakeLists.txt  COPYING  CallExprToValue.cpp  CallExprToValue.h  ClangDelta.cpp  CombineGlobalVarDecl.cpp  CombineGlobalVarDecl.h  CombineLocalVarDecl.cpp  CombineLocalVarDecl.h  CopyPropagation.cpp  CopyPropagation.h  Dockerfile  FuncParamReplacement.cpp  FuncParamReplacement.h  INSTALL  INSTALL.md  LAST_KNOWN_WORKING_LLVM  LICENSE.TXT  LiftAssignmentExpr.cpp  LiftAssignmentExpr.h  LocalToGlobal.cpp  LocalToGlobal.h  Makefile  Makefile.am  Makefile.in  NEWS  ParamToGlobal.cpp  ParamToGlobal.h  ParamToLocal.cpp  ParamToLocal.h  README  README.md  (+43 more)
c_reduce/: .gitignore  Makefile.am  Makefile.in  c.lex  c_reduce.pl  c_reduce.pl.in  creduce_indent.pm  creduce_indent_final.pm  creduce_regexes.pm  creduce_ternary.pm  creduce_ternary2.pm  creduce_utils.pm  del_lines.pl  go.sh  pass_balanced.pm  pass_blank.pm  pass_clang.pm  pass_crc.pm  pass_indent.pm  pass_indent_final.pm  pass_ints.pm  pass_lines.pm  pass_peep.pm  pass_template.pm  pass_ternary.pm  passes.txt  prep.pl  reduce.pl  reduce.sh  reduce_log.sh  shorten.pl  simple_delta.pl  test1_null.sh  test1_wrong_code.sh
clang_delta/: .gitignore  AggregateToScalar.cpp  AggregateToScalar.h  BinOpSimplification.cpp  BinOpSimplification.h  CMakeLists.txt  CallExprToValue.cpp  CallExprToValue.h  ClangDelta.cpp  ClassTemplateToClass.cpp  ClassTemplateToClass.h  CombineGlobalVarDecl.cpp  CombineGlobalVarDecl.h  CombineLocalVarDecl.cpp  CombineLocalVarDecl.h  CommonParameterRewriteVisitor.h  CommonRenameClassRewriteVisitor.h  CommonStatementVisitor.h  CommonTemplateArgumentVisitor.h  CopyPropagation.cpp  CopyPropagation.h  EmptyStructToInt.cpp  EmptyStructToInt.h  ExpressionDetector.cpp  ExpressionDetector.h  InstantiateTemplateParam.cpp  InstantiateTemplateParam.h  InstantiateTemplateTypeParamToInt.cpp  InstantiateTemplateTypeParamToInt.h  LICENSE.TXT  LiftAssignmentExpr.cpp  LiftAssignmentExpr.h  LocalToGlobal.cpp  LocalToGlobal.h  Makefile  Makefile.am  Makefile.in  MoveFunctionBody.cpp  MoveFunctionBody.h  MoveGlobalVar.cpp  (+122 more)
clang_delta/test/: RemoveTrivialBaseTemplate.cpp  TemplateNonTypeArgToInt.cpp
clang_delta/tests/: lit.cfg  lit.site.cfg.in  remove_lit_checks.in
clang_delta/tests/aggregate-to-scalar/: cast.c  test1.c  test1.cc  test2.c  test2.cc  test3.c  test4.c
clang_delta/tests/callexpr-to-value/: macro1.c  macro2.c  macro3.cc  test1.c  test2.c
clang_delta/tests/copy-propagation/: copy1.cpp  copy2.cpp  no_instance.c
clang_delta/tests/empty-struct-to-int/: empty-struct.cpp  empty-struct2.cpp  empty-struct3.cpp  empty-struct4.cpp  empty-struct5.cpp  empty-struct6.c  empty-struct7.c  struct_int.c  test1.cc  test2.cc  test3.c
clang_delta/tests/instantiate-template-param/: default_param.cc  test1.cc  test2.cc  test3.cc
clang_delta/tests/lift-assignment-expr/: decltype.cc
clang_delta/tests/local-to-global/: macro.c  unnamed_1.c  unnamed_2.c  unnamed_3.c
clang_delta/tests/param-to-global/: macro.c
clang_delta/tests/param-to-local/: defaulted.cc  macro.c  param.cc  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc
clang_delta/tests/reduce-array-dim/: non-type-temp-arg.cpp
clang_delta/tests/reduce-array-size/: array1.c  invalid.c
clang_delta/tests/reduce-class-template-param/: class_template1.cc  class_template2.cc  class_template3.cc  default_arg.cc  default_partial.cc  macro.cc  macro2.cc  non_type_param.cc  partial1.cc  partial2.cc  partial3.cc  partial4.cc  partial5.cc  spec.cc  template_specilization_type.cc  test1.cc  test2.cc  test3.cc
clex/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  c.lex  clex.l  clex.vcxproj  clex.vcxproj.filters  defs.h  driver.c  strlex.l  strlex.vcxproj  strlex.vcxproj.filters  stuff.h
creduce/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  __init__.py  creduce  creduce.in  creduce.py  creduce.vcxproj  creduce.vcxproj.filters  creduce_config.pm.in  creduce_regexes.pm  creduce_utils.pm  fork_win.pm.in  get_key.py  pass_balanced.pm  pass_blank.pm  pass_clang.pm  pass_clang_binsrch.pm  pass_clex.pm  pass_comments.pm  pass_crc.pm  pass_defines.pm  pass_ifs.pm  pass_include_includes.pm  pass_includes.pm  pass_indent.pm  pass_ints.pm  pass_line_markers.pm  pass_lines.pm  pass_peep.pm  pass_special.pm  pass_ternary.pm  pass_unifdef.pm  stuff.txt
creduce/pass_groups/: all.json  opencl-120.json
creduce/passes/: __init__.py  abstract.py  balanced.py  blank.py  clang.py  clangbinarysearch.py  clex.py  comments.py  delta.py  ifs.py  includeincludes.py  includes.py  indent.py  ints.py  line_markers.py  lines.py  peep.py  special.py  ternary.py  unifdef.py
creduce/tests/: balanced.py  comments.py  ints.py  nestedmatcher.py  peep.py  special.py  ternary.py  test0.py  test1.py  test2.py  test3.py  test6.py  test_ifs.py  test_ints.py  test_line_markers.py  test_peep.py
creduce/utils/: compat.py  error.py  info.py  nestedmatcher.py  parallel.py  readkey.py  statistics.py  testing.py
delta/: .gitignore  CMakeLists.txt  License.txt  Makefile.am  Makefile.in  Test.mk  delta  multidelta  topformflat.l
delta/test0_delta/: Makefile
delta/test1_multidelta/: Makefile  testit
delta/test2_multidelta/: file1.end.txt  file1.start.txt  file2.start.txt  testit
m4/: ax_clang.m4  (+1 more)
scripts/: Makefile.am  Makefile.in  del_lines  godelta8  localize_headers  make_cde_package.sh  prep  prep.pl  scripts.vcxproj  shorten  test1_crash.sh  test1_make_large_warnings.pl  test1_wrong_code_framac.sh  test1_wrong_code_kcc.sh  travis_deps.sh
tests/: .gitignore  Makefile.am  Makefile.in  README  base.py  file1.c  file2.c  file3.c  run_tests  test0.bat  test0.py  test0.sh  test1.py  test1.sh  test1_crash.sh  test2.py  test2.sh  test3.py  test3.sh  test4.sh  test5.sh  test6.py  test6.sh  test7.py  test7.sh  test8.sh  tests.vcxproj  tests.vcxproj.filters
unifdef/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  unifdef.c  unifdef.h  version.h
(+208 files in other folders)
