## -*- mode: Makefile.am -*-
##
## Copyright (c) 2012 The University of Utah
## All rights reserved.
##
## This file is distributed under the University of Illinois Open Source
## License.  See the file COPYING for details.

###############################################################################

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	c_reduce \
	clang_delta \
	scripts \
	tests

###############################################################################

## End of file.
