## -*- mode: Makefile-Automake -*-
##
## Copyright (c) 2012, 2013, 2015, 2016 The University of Utah
## All rights reserved.
##
## This file is distributed under the University of Illinois Open Source
## License.  See the file COPYING for details.

###############################################################################

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	clang_delta \
	clex \
	creduce \
	delta \
	scripts \
	tests \
	unifdef

EXTRA_DIST = \
	CMakeLists.txt \
	cmake \
	cmake_config.h.in \
	git-hash.sh

###############################################################################

## End of file.
