## -*- mode: Makefile.am -*-
##
## Copyright (c) 2012 The University of Utah
## All rights reserved.
##
## This file is distributed under the University of Illinois Open Source
## License.  See the file COPYING for details.

###############################################################################

dist_bin_SCRIPTS = \
	c_reduce.pl \
	creduce_regexes.pm \
	creduce_utils.pm \
	pass_balanced.pm \
	pass_clang.pm \
	pass_crc.pm \
	pass_indent.pm \
	pass_ints.pm \
	pass_lines.pm \
	pass_peep.pm \
	pass_ternary.pm

###############################################################################

## End of file.
